Sort out styling to display the footer in the correct position. Correctly align border-box; Make more responsive overall.

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -9,8 +9,6 @@ body {
   color: $dark-grey;
   font-size: $m-size;
   line-height: 1.6;
-  width: 100%;
-  height: 100%;
 }
 
 button {
@@ -29,6 +27,7 @@ button:disabled {
   font-family: 'Avenir', Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;  
+  height: 100vh;
 }
 
 .app-container {
@@ -39,7 +38,7 @@ button:disabled {
   overflow-x: hidden;
   display: grid;
   grid-template-rows: auto 1fr auto;
-  min-height: 100%;
+  min-height: calc(100% - 56px);
   grid-template-columns: 100%;
 }
 
