--- a/src/styles/components/_content_container.scss
+++ b/src/styles/components/_content_container.scss
@@ -3,5 +3,4 @@
     padding: 0 0.1%;
     max-width: 100rem;
     text-align: center;
-    height: 100vh;
   }
