--- a/src/styles/components/_landing.scss
+++ b/src/styles/components/_landing.scss
@@ -3,7 +3,6 @@
     background: linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),url('/img/background/kyoto-taikai.jpg');
     background-size: cover;
     display: flex;
-    height: 100vh;
     justify-content: left;
     width: 100vw;
   }
