--- a/src/styles/components/auth/_register.scss
+++ b/src/styles/components/auth/_register.scss
@@ -1,4 +1,3 @@
 .register {
-    height: 100vh;
     text-align: center;
 }
