--- a/src/styles/components/members/_members.scss
+++ b/src/styles/components/members/_members.scss
@@ -4,7 +4,6 @@
     align-items: center;
     background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),url('/img/background/Kyu-Butokuden.jpg');
     background-size: cover;
-    height: 100vh;
     justify-content: left;
     width: 100vw;
 }
