--- a/src/styles/components/members/_photos.scss
+++ b/src/styles/components/members/_photos.scss
@@ -1,5 +1,5 @@
 .images-uploads {
-    height: 100vh;
+    // height: 100vh;
 }
 
 .image-title {
